<resources>
    <string name="app_name">agenda</string>
    <string name="create">Create Contact</string>
    <string name="list">List contacts</string>
    <string name="name">Name</string>
    <string name="last_name"> Last Name</string>
    <string name="phone"> Phone</string>
    <string name="cellphone">Cellphone</string>
    <string name="save">Save</string>

    <string-array name="Menu">
        <item>@string/create</item>
        <item>@string/list</item>
    </string-array>
</resources>
